<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Online Shopping</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--navigation drawer and home menu name-->
    <string name="menu_product">Product</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_info">Information</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_logout">Logout</string>

    <!--title bar-->
    <string name="title_category">Category</string>
    <string name="title_menu">Menu List</string>
    <string name="title_cart">My Cart</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_confirm">Congratulations</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_about">About</string>
    <string name="title_buy">Buy this item</string>
    <string name="title_save">Save Image</string>

    <!--action-->
    <string name="action_cart">My Cart</string>
    <string name="action_checkout">Process Checkout</string>
    <string name="action_buy">Buy This Item</string>
    <string name="action_save">Save Image</string>
    <string name="action_clear">Clear All</string>

    <!--information tab name-->
    <string name="information_tab1">How to Buy</string>
    <string name="information_tab2">Payment</string>
    <string name="information_tab3">Contact us</string>

    <!--network-->
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="alert">Failed to connect internet!</string>
    <string name="not_found">Product Not Found!</string>

    <!--shipping information on checkout menu-->
    <string name="shipping_list_1">Free Shipping</string>
    <string name="shipping_list_2">Cash On Delivery</string>
    <string name="shipping_list_3">POS Indonesia</string>
    <string name="shipping_list_4">JNE</string>

    <!--menu, cart and order-->
    <string name="search">Search Menu</string>
    <string name="confirm">Confirmation</string>
    <string name="number_order">Number of order : </string>
    <string name="order">Order</string>
    <string name="detail">Detail</string>
    <string name="total_order">Total Order :</string>
    <string name="clear_order">Clear all order</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
    <string name="clear_one_order">Do you want to clear this order?</string>
    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="no_order">Your Cart is Empty, Please Order first.</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>

    <!--checkout menu-->
    <string name="checkout_your_name">Your Name</string>
    <string name="checkout_address">Your Address</string>
    <string name="checkout_city">Your City</string>
    <string name="checkout_province">Your Province</string>
    <string name="checkout_email">Your Email</string>
    <string name="checkout_set_date">Set Date</string>
    <string name="checkout_set_time">Set Time</string>
    <string name="checkout_phone_number">Phone Number</string>
    <string name="checkout_order_list">Order List</string>
    <string name="checkout_add_comment">Comment (Optional)</string>
    <string name="checkout_send_order">Send</string>
    <string name="form_alert">Please, complete the form first.</string>
    <string name="sending_alert">Sending data. Please wait &#8230;</string>
    <string name="ok_alert">Your Order has been successfully sent.</string>
    <string name="failed_alert">Your Order has not been sent.</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="no_order_menu">No order</string>

    <!--app about information-->
    <string name="app_version">Version 1.0.0</string>
    <string name="app_copyright">Copyright &#169; 2019 \n All rights reserved</string>
    <string name="app_email">srijal.fantastic@gmail.com</string>
    <string name="share_summary">Shreejal Nepal</string>
    <string name="rate_summary">Give your rate and feedback</string>
    <string name="more_summary">More apps from developer</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_share">About the Developer</string>
    <string name="title_app_rate">Rate</string>
    <string name="title_app_more">More</string>
    <string name="more_apps"></string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

    <!--contact us-->
    <string name="hint_email_subject">Subject :</string>
    <string name="hint_email_message">Message :</string>
    <string name="button_send">Send</string>

    <!--nav drawer header image-->
    <!--set "@string/drawer_content_on" to enable navigation drawer header image-->
    <!--set "@string/drawer_content_off" to disable navigation drawer header image-->
    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">All in One Shopping</string>
    <string name="nav_header_subtitle">Online Store</string>
    <string name="title_activity_maps">Map</string>


</resources>