<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_drawer_product"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_drawer_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/ic_drawer_checkout"
            android:title="@string/menu_checkout" />

    </group>


    <item android:title="Basic">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_drawer_info"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_drawer_about"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_comment_black_24dp"
                android:title="@string/menu_contact" />
        </menu>
    </item>

    <item android:title="Cogs">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_drawer_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_drawer_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
